# indigo-proof-of-yield

./: .gitignore  Cargo.toml  DISCORD_PITCH.md  Dockerfile  README.md
config/: indigo_v2_config.sample.json
crates/indigo_poy/: Cargo.toml
crates/indigo_poy/src/: lib.rs
crates/indigo_poy/src/chain/: cache.rs  fetch.rs  mod.rs  normalize.rs
crates/indigo_poy/src/compute/: metrics.rs  mod.rs
crates/indigo_poy/src/indigo/: events.rs  indy_staking.rs  mod.rs  protocol_config.rs  rob.rs  stability_pool.rs
crates/indigo_poy/src/report/: mod.rs
crates/indigo_poy/src/verify/: bundle.rs  mod.rs
crates/indigo_poy/tests/: integration.rs
crates/indigo_poy_cli/: Cargo.toml
crates/indigo_poy_cli/src/: main.rs
crates/indigo_poy_report/: Cargo.toml
crates/indigo_poy_report/src/: lib.rs
testdata/: account_txs.json  tx_utxos_abc123.json
