[package]
name = "indigo_poy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
base16 = "0.2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.22", features = ["ring"] }
rustls-native-certs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3.34", features = ["formatting", "parsing", "macros", "serde"] }
tokio = { version = "1", features = ["sync", "time", "fs", "rt-multi-thread"] }
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
url = "2.5"
urlencoding = "2.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
