[package]
name = "indigo_poy_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "indigo-poy"
path = "src/main.rs"

[dependencies]
indigo_poy = { path = "../indigo_poy" }
indigo_poy_report = { path = "../indigo_poy_report" }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

[lints]
workspace = true
